force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/ImpartnerBP2__BusinessPlan__c.object-meta.xml
<CustomObject>
    <label>Partner Business Plan</label>
    <nameField>
        <label>Business Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Business Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>