force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__AccountIssuesAndRisks__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__AccountIssuesAndRisks__c</fullName>
    <label>Account Issues and Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>