force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__Active__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>