force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__AdditionalNotes__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__AdditionalNotes__c</fullName>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>