force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__AttainedToObjective__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__AttainedToObjective__c</fullName>
    <formula>IF(
   OR(
       ISBLANK(ImpartnerBP2__RevenueObjective__c),
       ImpartnerBP2__RevenueObjective__c = 0
     ), 0,
     ImpartnerBP2__RevenueWon__c / ImpartnerBP2__RevenueObjective__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Attained To Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>