force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__BusinessPlanStatus__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__BusinessPlanStatus__c</fullName>
    <label>Business Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Partner Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>