force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__CasesClosed__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__CasesClosed__c</fullName>
    <label>Cases Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>