force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>