force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__FiscalYear__c</fullName>
    <label>Fiscal Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>