force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__IsPreview__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__IsPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the plan is a preview-only plan.</description>
    <inlineHelpText>Indicates whether the plan is a preview-only plan.</inlineHelpText>
    <label>Is Preview</label>
    <type>Checkbox</type>
</CustomField>