force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__LastRefreshed__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__LastRefreshed__c</fullName>
    <label>Last Refreshed</label>
    <type>DateTime</type>
</CustomField>