force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__LeadsRegistered__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__LeadsRegistered__c</fullName>
    <label>Leads Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>