force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__MarketingDemandGenerationObjectives__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__MarketingDemandGenerationObjectives__c</fullName>
    <label>Marketing/Demand Generation Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>