force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__OpportunitiesOpen__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__OpportunitiesOpen__c</fullName>
    <label>Opportunities Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>