force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Partner Account to which this Business Plan is linked.</description>
    <inlineHelpText>The Partner Account to which this Business Plan is linked.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BusinessPlans</relationshipName>
    <type>Lookup</type>
</CustomField>