force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__PartnershipGoals__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__PartnershipGoals__c</fullName>
    <label>Partnership Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>