force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__RevenueObjectiveQ1__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__RevenueObjectiveQ1__c</fullName>
    <label>Revenue Objective Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>