force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__RevenuePending__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__RevenuePending__c</fullName>
    <label>Revenue in Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>