force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__RevenueWon__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__RevenueWon__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>