force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__RevenueWonQ3__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__RevenueWonQ3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>