force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>