force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__TotalOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__TotalOpportunities__c</fullName>
    <label>Total Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>