force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/fields/ImpartnerBP2__TrainingObjectives__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__TrainingObjectives__c</fullName>
    <label>Training Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>