force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/listViews/ImpartnerBP2__All.listView-meta.xml
<ListView>
    <fullName>ImpartnerBP2__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>