force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/listViews/ImpartnerBP2__All1.listView-meta.xml
<ListView>
    <fullName>ImpartnerBP2__All1</fullName>
    <columns>NAME</columns>
    <columns>ImpartnerBP2__PartnerAccount__c</columns>
    <columns>ImpartnerBP2__Active__c</columns>
    <columns>ImpartnerBP2__IsPreview__c</columns>
    <columns>ImpartnerBP2__LastRefreshed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>