force-app/main/default/objects/ImpartnerBP2__BusinessPlan__c/listViews/ImpartnerBP2__Impartner.listView-meta.xml
<ListView>
    <fullName>ImpartnerBP2__Impartner</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Impartner</label>
</ListView>